Build URIs from config internally