@@ -1,9 +1,10 @@
 package com.jtprince.bingo.plugin;
 
+import org.apache.http.client.utils.URIBuilder;
 import org.jetbrains.annotations.NotNull;
 
 import java.net.*;
-import java.nio.charset.StandardCharsets;
+import java.util.logging.Level;
 
 public class MCBConfig {
     /**
@@ -15,18 +16,31 @@ public class MCBConfig {
 
     /**
      * Get the WebSocket URL to connect to the Bingo webserver hosting a game.
-     * @param gameCode Game code that will be put in the URL.
+     * @param gameCode Game code that will be put in the URL, or null if it is improperly configured.
      */
     public static URI getWebsocketUrl(String gameCode) {
-        String template = MCBingoPlugin.instance().getConfig().getString("urls.websocket");
+        String template = MCBingoPlugin.instance().getConfig().getString("web_url");
         if (template == null) {
-            MCBingoPlugin.logger().severe("No websocket URL is configured!");
+            MCBingoPlugin.logger().severe("No web_url is configured!");
             return null;
         }
+
         try {
-            return new URI(template.replace("$code", URLEncoder.encode(gameCode, StandardCharsets.UTF_8)));
+            URIBuilder builder = new URIBuilder(template);
+
+            if (builder.getScheme().equalsIgnoreCase("https")) {
+                builder.setScheme("wss");
+            } else if (builder.getScheme().equalsIgnoreCase("http")) {
+                builder.setScheme("ws");
+            } else {
+                throw new URISyntaxException(template, "Scheme must be http or https");
+            }
+
+            builder.setPathSegments("ws", "board-plugin", gameCode);
+
+            return builder.build();
         } catch (URISyntaxException e) {
-            e.printStackTrace();
+            MCBingoPlugin.logger().log(Level.SEVERE, "Misconfigured web_url", e);
             return null;
         }
     }
@@ -34,21 +48,24 @@ public class MCBConfig {
     /**
      * Get a URL that a player can click to open their bingo board for a certain game.
      * @param gameCode Game code that will be put in the URL.
-     * @param p The player whose board will be shown at this URL.
+     * @param p The player whose board will be shown at this URL, or null if it is improperly
+     *          configured.
      */
     public static URL getGameUrl(@NotNull String gameCode, @NotNull BingoPlayer p) {
-        String template = MCBingoPlugin.instance().getConfig().getString("urls.game_player");
+        String template = MCBingoPlugin.instance().getConfig().getString("web_url");
         if (template == null) {
-            MCBingoPlugin.logger().severe("No game_player URL is configured!");
+            MCBingoPlugin.logger().severe("No web_url is configured!");
             return null;
         }
+
         try {
-            return new URL(template
-                .replace("$code", URLEncoder.encode(gameCode, StandardCharsets.UTF_8))
-                .replace("$player", URLEncoder.encode(p.getName(), StandardCharsets.UTF_8))
-            );
-        } catch (MalformedURLException e) {
-            e.printStackTrace();
+            URIBuilder builder = new URIBuilder(template);
+            builder.setPathSegments("game", gameCode);
+            builder.setParameter("name", p.getName());
+
+            return builder.build().toURL();
+        } catch (URISyntaxException | MalformedURLException e) {
+            MCBingoPlugin.logger().log(Level.SEVERE, "Misconfigured web_url", e);
             return null;
         }
     }
